# orchids-challenge-2

./: AGENTIC_CLONER_INTEGRATION.md  PRECISION_METRICS_FRONTEND.md  README.md
.cursor/rules/: cursor rules.mdc
backend/: PRECISION_METRICS.md  clone_service.py  config.py  llm_service.py  main.py  models.py  precision_calculator.py  pyproject.toml  requirements-agentic.txt  scraper.py
backend/services/: agentic_clone_service.py  browserbase_scraper.py  claude_generator.py  supabase_storage.py  zep_memory.py
backend/storage/previews/: 00d5f424.html  01fffdbb.html  064471a6.html  08661e64.html  0daf3831.html  1e9749e7.html  26e6d232.html  28dfba4e.html  34eb7275.html  65238497.html  784f261c.html  8bef0d6c.html  9fe416b5.html  b1bc563a.html  b7f4bd90.html  bfc91d3b.html  d547020d.html  e244ddaa.html  e49d5d97.html  e9fea2b1.html
backend/utils/: image_utils.py  prompt_builder.py
frontend/src/app/: page.tsx
